--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<p class="selector">Paragraph 1</p>
-	<p>Paragraph 2</p>
-	<p>Paragraph 3</p>
-	<p class="selector">Paragraph 4</p>
+	<p class="selector">Pragraph 1</p>
+	<p>Pragraph 2</p>
+	<p>Pragraph 3</p>
+	<p class="selector">Pragraph 4</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
